fix(#124): text overflow show tooltip

--- a/src/view/index/side/index.component.scss
+++ b/src/view/index/side/index.component.scss
@@ -50,6 +50,10 @@ $sideWidth: 200px;
       }
     }
   }
+  
+  .ant-menu-item {
+    padding-right: 40px;
+  }
 }
 
 .logo {
